--- a/esplay-docs/CanOS for ESPlay/Steps/点亮屏幕.md
+++ b/esplay-docs/CanOS for ESPlay/Steps/点亮屏幕.md
@@ -1,5 +1,20 @@
 ![[Pasted image 20241201104421.png]]
 
+main.c
+```c
+// 初始化系统
+void canos_init()
+{
+    printf("Hello world! CanOS! 你好世界！\n");
+
+    // 启动显示屏
+    display_prepare();
+    display_init();
+    set_display_brightness(30);
+    printf("Display start success.\n");
+    display_show_hourglass();
+}
+```
 ## 文件夹结构
 
 如果有多个文件夹，每个文件夹都有 include 和 src，可以这样引入：
